syntax = "proto3";

option java_package = "layla.sleep.proto";

import "CombatInvokeEntry.proto";

// Name: AGBJEGIMDLE
// CmdId: 387
message CombatInvocationsNotify {
    repeated CombatInvokeEntry invoke_list = 3;
}

