syntax = "proto3";




message AvatarFightPropNotify {
	enum FMAOPOPANDM {
		option allow_alias = true;
		NONE = 0;
		PEPPOHPHJOJ = 1220;
		DCDNILFDFLB = 0;
		NNBKOLMPOEA = 1;
	}

	map<uint32, float> fightPropMap = 13;
	uint64 avatarGuid = 12;
}
